# kak-debug

./: .gitignore  README.md  adapters.yaml  pyproject.toml
rc/: kak-debug.kak
src/: breakpoints.py  config.py  debug_session.py  general.py  kakoune.py  main.py  stacktrace.py  variables.py
src/kak_debug/: __init__.py
